--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1024,4 +1024,19 @@ transform()
     width 100%
     display block
 
+// контакты, о нас, блог
+.wrap
+  width 990px
+  margin 0 auto
+  text-align left
+  &.contacts
+    .input
+      width 300px
+      display block
+      margin-bottom 10px
+    textarea
+      width 500px
+      height 100px
+      display block
+      margin-bottom 10px
 
