--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1024,6 +1024,16 @@ transform()
     width 100%
     display block
 
+.loading
+  width 150px
+  height 150px
+  padding-top 60px
+  display inline-block
+  img
+    width: 30px;
+    margin 0 auto
+    display block
+
 // контакты, о нас, блог
 .wrap
   width 990px
