--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -16,10 +16,15 @@
                     <input type="text" class="poll-readonly" readonly value="Добавить ответ" ng-click="base.addPollInput($event,lenta)"/>
                 </div>
 
-                <div class="attach-area" id="attach-area-0"></div>
+                <div class="attach-area" id="attach-area-0">
+                    <div class="loading hidden">
+                        <img ng-src="i/loading2.gif" alt="картинка"/>
+                    </div>
+                </div>
                 <div class="attach-area attach-area-doc" id="attach-doc-area-0"></div>
 
                 <div class="message-input-bottom">
+
                     <div class="btn-group attach-dropdown pull-right">
                         <button data-toggle="dropdown" class="btn btn-info btn-sm dropdown-toggle no-border" data-producerid="0">
                         <span class="btn-group-text">Прикрепить</span>
@@ -171,7 +176,11 @@
                                 onblur="if(this.value=='') this.value='Ваш ответ';"
                                 onfocus="if(this.value=='Ваш ответ') this.value='';" ></textarea>
 
-                                <div id="attach-area-{{wallItem.topic.id}}" class="attach-area"></div>
+                                <div id="attach-area-{{wallItem.topic.id}}" class="attach-area">
+                                    <div class="loading hidden">
+                                        <img ng-src="i/loading2.gif" alt="картинка"/>
+                                    </div>
+                                </div>
                                 <div id="attach-doc-area-{{wallItem.topic.id}}" class="attach-area attach-area-doc"></div>
 
                                 <span class="input-group-btn" ng-show="wallItem.answerShow">
