--- a/vonline_be/war/partials/talks.html
+++ b/vonline_be/war/partials/talks.html
@@ -23,7 +23,11 @@
                     <input type="text" class="poll-readonly" readonly value="Добавить ответ" ng-click="base.addPollInput($event,talks)"/>
                 </div>
 
-                <div class="attach-area" id="attach-area-00"></div>
+                <div class="attach-area" id="attach-area-00">
+                    <div class="loading hidden">
+                        <img ng-src="i/loading2.gif" alt="картинка"/>
+                    </div>
+                </div>
                 <div class="attach-area attach-area-doc" id="attach-doc-area-00"></div>
 
                 <div class="message-input-bottom">
