--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -165,6 +165,7 @@ transform()
     margin 5px 0
   ul
     margin-left 0
+    margin-bottom 0
     li
       border-top 1px solid #438eb9
       padding 5px
@@ -184,9 +185,13 @@ transform()
     font-size 11px
     border-bottom 1px solid #438eb9
     padding 3px 5px
-    border-top 1px solid #438eb9
+  .importantly-middle
+    font-size 14px
+    padding 3px 5px
+    border-bottom 1px solid #438eb9
   .importantly-top
     font-size 18px
+    border-top 1px solid #438eb9
 
 .btn
   border-radius main-radius !important
