--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1055,3 +1055,23 @@ transform()
       display block
       margin-bottom 10px
 
+.blog
+  text-align left
+  .dialogs
+  .input-group
+    display none
+  .anonName
+    width 100%
+    margin-bottom 10px
+  .message-textarea
+    width 100%
+    margin-bottom 10px
+  .input-group
+    padding-top 10px
+  .no-link
+    cursor default
+    color #000
+    &:hover
+      color #000
+      text-decoration none
+
