--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -184,6 +184,7 @@ transform()
   .importantly-bottom
     font-size 11px
     border-bottom 1px solid #438eb9
+    border-top 1px solid #438eb9
     padding 3px 5px
   .importantly-middle
     font-size 14px
@@ -665,6 +666,8 @@ transform()
   .wallitem-message
     padding-top 10px
     border-top 1px solid rgb(80, 144, 193)
+    &.wall-single
+      border 0
     .input-group
       display block
       .input-group-btn
