--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -185,6 +185,7 @@ h1 {
 .sidebar-right .importantly-bottom {
   font-size: 11px;
   border-bottom: 1px solid #438eb9;
+  border-top: 1px solid #438eb9;
   padding: 3px 5px;
 }
 .sidebar-right .importantly-middle {
@@ -749,6 +750,9 @@ h1 {
 .lenta-item .wallitem-message {
   padding-top: 10px;
   border-top: 1px solid #5090c1;
+}
+.lenta-item .wallitem-message.wall-single {
+  border: 0;
 }
 .lenta-item .wallitem-message .input-group {
   display: block;
