--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -808,14 +808,14 @@ h1 {
   position: absolute;
   bottom: 3px;
 }
-.lenta-item .fa-star {
+.fa-star {
   color: #ccc;
   font-size: 16px;
   margin-right: 10px;
   margin-top: 4px;
 }
-.lenta-item .fa-star:hover,
-.lenta-item .fa-star.important {
+.fa-star:hover,
+.fa-star.important {
   color: #ffea4a;
 }
 .itemdiv.dialogdiv > .body {
