--- a/vonline_be/war/partials/main.html
+++ b/vonline_be/war/partials/main.html
@@ -74,7 +74,7 @@
                             <div class="body" ng-switch on="wallItem.topic.metaType">
                                 <span class="label label-lg arrowed lenta-item-hashtag pull-right"
                                         ng-class="wallItem.tagColor">{{wallItem.label}}</span>
-                                <a class="fa fa-star pull-right" ng-class="{'important' : wallItem.topic.message.important == 1}" title='Пометить как "Важное"' href="#" ng-click="base.markImportant($event,wallItem.topic.message)"></a>
+                                <a class="fa fa-star pull-right" ng-class="{'important' : wallItem.topic.message.important == 1}" title='{{ wallItem.topic.message.importantText }}' href="#" ng-click="base.markImportant($event,wallItem.topic.message)"></a>
 
                                 <div class="name">
                                     <a ui-sref="profile({userId: {{ wallItem.topic.userInfo.id }} })">{{wallItem.topic.authorName}}</a>
@@ -215,7 +215,7 @@
                             <div class="talks-title-right">
                                 <span class="label label-lg arrowed lenta-item-hashtag pull-right"
                                       ng-class="wallItem.tagColor">{{wallItem.label}}</span>
-                                <a class="fa fa-star pull-right" ng-class="{'important' : wallItem.topic.message.important == 1}" title='Пометить как "Важное"' href="#" ng-click="base.markImportant($event,wallItem.topic.message)"></a>
+                                <a class="fa fa-star pull-right" ng-class="{'important' : wallItem.topic.message.important == 1}" title='{{ wallItem.topic.message.importantText }}' href="#" ng-click="base.markImportant($event,wallItem.topic.message)"></a>
                                 <div class="clearfix"></div>
 
                                 <div>Последнее обновление:</div>
