--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -213,7 +213,7 @@
       margin 5px 0
       font-size 20px
     .tools
-      margin-bottom 15px
+      text-align right
       .checkbox
         display inline-block
         padding-left 0
@@ -224,6 +224,8 @@
         margin-left 10px
         vertical-align middle
         display inline-block
+        color #c4c4c4
+        margin-top -12px
         &:hover
           text-decoration none
     .widget-box
@@ -235,6 +237,15 @@
       .widget-main
         border-radius 3px
         padding 25px 36px
+      .btn-back
+        color #c4c4c4
+        display inline-block
+        margin-top 10px
+        font-size 14px
+        &:hover
+          text-decoration none
+      .btn-login
+        margin-top 15px
 
 .help-text
   font-size 12px
@@ -254,7 +265,9 @@
     float none !important
 
 .reg-forum
-  //padding-top 60px
+  height auto
+  padding-bottom 80px
+  position relative
   header
     padding 20px 0
     border-bottom 1px solid #438eb9
