--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -153,6 +153,14 @@ transform()
     margin-top 40px
   &.footer-bottom
     padding 20px 0
+  &.footer-login
+    position absolute
+    bottom 0
+  &.footer-white
+    border-top 1px solid #fff
+    color #fff
+    a
+     color #fff
 
 
 .sidebar-right
