--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1075,6 +1075,12 @@ transform()
       height 100px
       display block
       margin-bottom 10px
+    .contacts-user
+      margin-bottom 10px
+      .user-name
+        margin-left 50px
+    .send
+      margin-right 15px
 
 .blog
   text-align left
